--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
