--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,10 @@ html {
   padding: 10px;
   text-align: center;
   border-radius: 5px;
-  -webkit-border-radius: ;
-  -moz-border-radius: ;
-  -ms-border-radius: ;
-  -o-border-radius: ;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 .colors {
@@ -193,6 +193,7 @@ html {
   z-index: 2;
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .header .logo {
@@ -228,9 +229,9 @@ html {
   position: absolute;
   z-index: 2;
   text-align: center;
-  transform: translate(-50%, -50%);
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .intro div {
@@ -566,13 +567,13 @@ html {
 }
 
 .features .box:hover {
-  box-shadow: 0px 0px 4px 0px var(--main-color);
+  box-shadow: 2px 2px 6px 0px var(--main-color);
   border-radius: 8px;
-  transform: translateY(-10px);
-  -webkit-transform: translateY(-10px);
-  -moz-transform: translateY(-10px);
-  -ms-transform: translateY(-10px);
-  -o-transform: translateY(-10px);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
@@ -775,4 +776,107 @@ html {
   background-color: #333;
   padding: 20px;
   text-align: center;
+}
+
+.nav-bullets {
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 55;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+
+.nav-bullets .bullets {
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: 3px solid var(--main-color);
+  margin-bottom: 25px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+.nav-bullets .section {
+  position: absolute;
+  width: 120px;
+  padding: 8px 10px;
+  right: 30px;
+  background-color: var(--main-color);
+  text-align: center;
+  top: -10px;
+  display: none;
+  color: white;
+}
+
+.nav-bullets .section::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-color: transparent transparent transparent var(--main-color);
+  border-width: 10px;
+  border-style: solid;
+  right: -20px;
+}
+
+.nav-bullets .bullets:hover .section {
+  display: block;
+}
+
+.menu-bar {
+  font-size: 30px;
+  margin: 20px;
+  display: none;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+}
+
+@media (max-width: 991px) {
+  .header .nav-bar li {
+    display: block;
+    margin: 3px;
+  }
+  .header .nav-bar {
+    display: none;
+  }
+  .header .nav-bar.open {
+    flex-direction: column;
+    background-color: #fff;
+    padding: 10px;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 60px;
+    width: 100%;
+    border-radius: 4px;
+    text-align: left;
+  }
+  .header .nav-bar.open::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent transparent white transparent;
+    border-width: 10px;
+    border-style: solid;
+    right: 23px;
+    top: -20px;
+  }
+  .header .nav-bar li a {
+    color: var(--main-color);
+    font-weight: bold;
+  }
+  .menu-bar {
+    display: block;
+  }
 }
