--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ html {
 @media (max-width: 991px) {
   .header .nav-bar li {
     display: block;
-    margin: 5px;
+    margin: 3px 10px;
   }
   .header .nav-bar {
     display: none;
